--- a/tabletop.html
+++ b/tabletop.html
@@ -97,7 +97,7 @@ let snapToGrid = true;
 let precisionMode = false;
 
 /* ================= SOCKET ================= */
-const socket = new WebSocket("ws://localhost:8000/ws/secure/");
+const socket = new WebSocket("ws://192.168.1.125:8000/ws/secure/");
 
 /* ================= STATE ================= */
 let dragging = false;
