--- a/dashboard.html
+++ b/dashboard.html
@@ -6,14 +6,14 @@
 <body>
 <div class="container">
   <h2>Minha Conta</h2>
-
+  <span id="room"></span>
   <input id="username">
   <input id="email">
   <input id="password" placeholder="Nova senha">
 
   <button onclick="update()">Salvar</button>
   <button onclick="logout()">Logout</button>
-  <button onclick="sala()">ENTRAR EM SALA</button>
+  <button onclick="create_room()">ENTRAR EM SALA</button>
 </div>
 
 <script>
@@ -38,6 +38,7 @@ async function loadUser() {
   const data = await res.json();
   username.value = data.username;
   email.value = data.email;
+  document.getElementById('room').innerHTML = 'Sua sala: '+data.room[0]
 }
 
 
@@ -82,8 +83,9 @@ async function logout() {
   window.location.href = "index.html";
 }
 
-async function sala(params) {
-  window.location.href = "tabletop.html"
+
+async function create_room(params) {
+  window.location.href = "room.html"
 }
 
 loadUser();
