--- a/room.html
+++ b/room.html
@@ -71,6 +71,8 @@ button:hover {
 <body>
 
 <div class="controls">
+  <input type="text" id="room"> 
+  <input type="button" value="Entrar" onclick="enter_room()">
   <button id="toggleGrid">Desativar grid</button>
 
   <label>
@@ -97,7 +99,11 @@ let snapToGrid = true;
 let precisionMode = false;
 
 /* ================= SOCKET ================= */
-const socket = new WebSocket("ws://localhost:8000/ws/secure/");
+const enterStr = document.getElementById("room")
+let socket
+function enter_room(){
+    socket = new WebSocket(`ws://localhost:8000/ws/secure/?room=${enterStr.value}`);
+
 
 /* ================= STATE ================= */
 let dragging = false;
@@ -212,6 +218,7 @@ document.addEventListener("mouseup", () => {
   dragging = false;
   currentPiece = null;
 });
+}
 </script>
 
 </body>
