--- a/dashboard.html
+++ b/dashboard.html
@@ -17,8 +17,9 @@
 </div>
 
 <script>
+const domain = 'localhost'
 async function getCSRFToken() {
-  const res = await fetch("http://192.168.1.125:8000/users/csrf/", {
+  const res = await fetch(`http://${domain}:8000/users/csrf/`, {
     credentials: "include"
   });
 
@@ -26,7 +27,7 @@ async function getCSRFToken() {
   return data.csrfToken;
 }
 async function loadUser() {
-  const res = await fetch("http://192.168.1.125:8000/users/", {
+  const res = await fetch(`http://${domain}:8000/users/`, {
     credentials: "include"
   });
 
@@ -54,7 +55,7 @@ async function update() {
     payload.password = password.value;
   }
 
-  const res = await fetch("http://192.168.1.125:8000/users/update/", {
+  const res = await fetch(`http://${domain}:8000/users/update/`, {
     method: "PATCH",
     credentials: "include",
     headers: {
@@ -67,14 +68,14 @@ async function update() {
   if (res.ok) {
     alert("Dados atualizados");
   }
-  // const socket = new WebSocket("ws://192.168.1.125:8000/ws/secure/");
+  // const socket = new WebSocket(`ws://${domain}:8000/ws/secure/`);
 
 }
 
 async function logout() {
   const csrf = await getCSRFToken();
 
-  await fetch("http://192.168.1.125:8000/users/logout/", {
+  await fetch(`http://${domain}:8000/users/logout/`, {
     method: "POST",
     credentials: "include",
     headers: { "X-CSRFToken": csrf }
