--- a/register.html
+++ b/register.html
@@ -16,8 +16,9 @@
 </div>
 
 <script>
+const domain = 'localhost'
 async function getCSRFToken() {
-  const res = await fetch("http://192.168.1.125:8000/users/csrf/", {
+  const res = await fetch(`http://${domain}:8000/users/csrf/`, {
     credentials: "include"
   });
 
@@ -28,7 +29,7 @@ async function getCSRFToken() {
 async function register() {
   const csrf = await getCSRFToken();
 
-  const res = await fetch("http://192.168.1.125:8000/users/register/", {
+  const res = await fetch(`http://${domain}:8000/users/register/`, {
     method: "POST",
     credentials: "include",
     headers: {
