corrige posição de inputs

--- a/dashboard.html
+++ b/dashboard.html
@@ -7,9 +7,9 @@
 <div class="container">
   <h2>Minha Conta</h2>
   <span id="room"></span>
-  <input id="username">
-  <input id="email">
-  <input id="password" placeholder="Nova senha">
+  <input id="username" style="width: 280px;">
+  <input id="email" style="width: 280px;">
+  <input id="password" placeholder="Nova senha" style="width: 280px;">
 
   <button onclick="update()">Salvar</button>
   <button onclick="logout()">Logout</button>
